c/src/test/resources/c/mini_bnc/valid/dirSel.ctrl
<controlFile>
  <sourceFile name="dirSel.c" id="1" />
  <run>
    <startPosition fileId="1" line="6" />
    <endPosition fileId="1" line="10" />
  </run>
</controlFile>