c/src/test/resources/c/mini_bnc/invalid/pointerCast.ctrl
<controlFile>
  <sourceFile name="pointerCast.c" id="1" />
  <run>
    <startPosition fileId="1" line="10" />
    <endPosition fileId="1" line="22" />
  </run>
</controlFile>